--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,7 @@
 
 
   <script src="{% static 'vendors.js' %}" type="text/javascript"></script>
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&delayStartupUntil=configured"></script>
   <script src="{% static 'app.js' %}" type="text/javascript"></script>
   <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 
