--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -34,7 +34,8 @@
               <div style="overflow:hidden">
                 <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">
                   Ваш браузер не поддерживает плавающие фреймы!
-                </iframe></div>
+                </iframe>
+              </div>
             </div>
           </div>
         </div>
