Add md5 hashes to static names

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static i18n %}
+{% load staticfiles i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 
 <html lang="{{ LANGUAGE_CODE }}" class="{% block html_classes %}{% endblock %}">
