html and js fixes

--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -17,7 +17,7 @@
       <a href="{% url 'social:begin' backend='linkedin-oauth2' %}" class="btn btn-circle btn-linkedin">
         <i class="fa fa-linkedin"></i>
       </a>
-      <a href="{% url 'social:begin' backend='google-oauth2' %}" class="btn btn-circle btn-google-plus">
+      <a href="{% url 'social:begin' backend='google-oauth2' %}" class="btn btn-circle btn-google">
         <i class="fa fa-google-plus"></i>
       </a>
     </div>
