Add unread comment for experiment

--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -10,7 +10,7 @@
 {% block page_header %}{% endblock %}
 {% block content %}
 
-<div class="row" id="experiment_row" data-experiment-pk="{{ object.pk }}">
+<div class="row" id="experiment_row" data-experiment-pk="{{ object.pk }}" data-read-url="{% url 'experiments:read-comments' pk=object.pk lab_pk=object.lab.pk %}">
   <div class="col-lg-12">
     <div class="nav-tabs-custom no-bottom-margin">
       <ul class="nav nav-tabs exp-nav" role="tablist">
@@ -24,6 +24,12 @@
         <div class="tab-pane active" id="exp-chat">
           <div class="row">
             <div class="col-lg-12">
+              {% if experiment_unread_comments %}
+                <div class="alert alert-warning alert-dismissible comments-alert" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  Where are new messages
+                </div>
+              {% endif %}
               {% include 'comments/comment_form_block.html' with not_collapse="1" %}
             </div>
           </div>
