--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,11 @@
   {% if user.is_authenticated %}
     <div class="user-panel">
       <div class="image pull-left">
-        <img src="{% static 'img/ava_placeholder.png' %}" class="img-circle" alt="User Image">
+        {% if user.avatar %}
+          <img src="{{ user.avatar_thumbnail.url }}" class="img-circle" alt="User Image">
+        {% else %}
+          <img src="{% static 'img/ava_placeholder.png' %}" class="img-circle" alt="User Image">
+        {% endif %}
       </div>
       <div class="pull-left info">
         <p>{{ user.full_name }}</p>
