Add angular for exp page(unit details)

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
   <script>if (!window.jQuery) { document.write('<script src="/static/jquery.min.js"><\/script>'); }</script>
   {% block top_scripts %}{% endblock %}
 </head>
-<body class="sidebar-mini {% block body_classes %}skin-black {% endblock %}{% if SIDEBAR_COLLAPSED %}sidebar-collapse{% endif %}">
+<body ng-app="LabrepoApp" class="sidebar-mini {% block body_classes %}skin-black {% endblock %}{% if SIDEBAR_COLLAPSED %}sidebar-collapse{% endif %}">
 {% block body %}
 <div class="wrapper">
   {% block menu %}
