--- a/templates/filemanager/angular/modal.html
+++ b/templates/filemanager/angular/modal.html
@@ -8,7 +8,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
       <div class="modal-body">
-        <div data-ng-app="FileManagerApp">
+        <div >
           <div class="ng-cloak">
             <angular-filemanager></angular-filemanager>
           </div>
