--- a/templates/filemanager/angular/base.html
+++ b/templates/filemanager/angular/base.html
@@ -2,35 +2,13 @@
 {% load i18n %}
 
 {% block extra_script %}
-  <script type="text/javascript">
-    var lab_pk = '{{ lab.pk }}';
-    angular.module('FileManagerApp').config(['fileManagerConfigProvider', function (config) {
-      var defaults = config.$get();
-      config.set({
-        appName: '{{ lab }} storages',
-        listUrl: '/' + lab_pk + '/filemanager/list/',
-        createFolderUrl: '/' + lab_pk + '/filemanager/createfolder/',
-        renameUrl: '/' + lab_pk + '/filemanager/rename/',
-        removeUrl: '/' + lab_pk + '/filemanager/remove/',
-        uploadUrl: '/' + lab_pk + '/filemanager/upload/',
-        downloadFileUrl: '/' + lab_pk + '/filemanager/download/',
-        allowedActions: angular.extend(defaults.allowedActions, {
-          remove: true,
-          changePermissions: false,
-          edit: false,
-          compress: false,
-          compressChooseName: false,
-          extract: false
-        })
-      });
-    }]);
-  </script>
+
 {% endblock %}
 {% block page_header %}{% endblock %}
 
 {% block content %}
-<div data-ng-app="FileManagerApp">
-  <div class="ng-cloak">
+<div>
+  <div>
     <angular-filemanager></angular-filemanager>
     </div>
 </div>
